force-app/main/default/objects/Disclosure_Workflow__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Accumulated comments from all approval steps. Updated at each stage of the approval process to maintain a full audit trail of reviewer feedback.</description>
    <inlineHelpText>Comments from the approval process reviewers.</inlineHelpText>
</CustomField>