force-app/main/default/objects/Disclosure_Workflow__c/fields/Board_Approver__c.field-meta.xml
<CustomField>
    <fullName>Board_Approver__c</fullName>
    <label>Board Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Board_Approved_Disclosures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Board representative responsible for final governance review. Used as the approver in the Board Review step of the SEC Disclosure Approval Process.</description>
    <inlineHelpText>Select the board representative who will provide final governance approval.</inlineHelpText>
</CustomField>