force-app/main/default/objects/Disclosure_Workflow__c/fields/CEO_Approver__c.field-meta.xml
<CustomField>
    <fullName>CEO_Approver__c</fullName>
    <label>CEO Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CEO_Approved_Disclosures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chief Executive Officer responsible for executive sign-off. Used as the approver in the CEO Approval step of the SEC Disclosure Approval Process.</description>
    <inlineHelpText>Select the CEO who will provide executive approval for this disclosure.</inlineHelpText>
</CustomField>