force-app/main/default/objects/Disclosure_Workflow__c/fields/CFO_Approver__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approver__c</fullName>
    <label>CFO Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CFO_Approved_Disclosures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chief Financial Officer responsible for reviewing financial impact and accuracy. Used as the approver in the CFO Review step of the SEC Disclosure Approval Process.</description>
    <inlineHelpText>Select the CFO who will review financial aspects of this disclosure.</inlineHelpText>
</CustomField>