force-app/main/default/objects/Disclosure_Workflow__c/fields/Legal_Approver__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approver__c</fullName>
    <label>Legal Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Approved_Disclosures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal counsel responsible for reviewing the disclosure for regulatory accuracy. Used as the approver in the Legal Review step of the SEC Disclosure Approval Process.</description>
    <inlineHelpText>Select the legal counsel who will review this disclosure.</inlineHelpText>
</CustomField>