force-app/main/default/objects/Disclosure_Workflow__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
    <description>The date and time the disclosure workflow was submitted for approval. Set automatically when the CISO initiates the approval process.</description>
    <inlineHelpText>Date and time this disclosure was submitted for approval.</inlineHelpText>
</CustomField>